--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     {% block head %}
-    <title>TreasureMap{% block title %}{% endblock %}</title>
+    <title>Treasure Map {% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Treasure Map">
     <meta name="keywords" content="">
     <meta name="author" content="Fenimore Love">
     <meta charset="utf-8">
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"  rel="stylesheet">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ url_for('static', filename='ico/favicon.ico') }}">
     {% endblock %}
     
   </head>
@@ -35,7 +35,7 @@
         <hr>
         {% block footer %}
         <footer class="footer">
-            <p>Treasure Map | Fenimore Love 2015</p>
+            <p>Treasure Map | 2015</p>
         </footer>
         {% endblock %}
     </div>
